@@ -1,22 +1,27 @@
-importFrom(Matrix,
-      "t",
-      "crossprod",
-      "tcrossprod",
-      "colMeans"
-)
+#importFrom(Matrix,
+#      "t",
+#      "crossprod",
+#      "tcrossprod",
+#      "colMeans"
+#)
+import(Matrix, lme4)
 
 importFrom(stats,
-      "coef"
-      #"extractAIC"
+      "coef",
+      "napredict"
 )
 
-importFrom(lme4,
-      "fixef",
-      "ranef"
-)
+importFrom(MASS, "polr")
+
+importFrom(methods, "setOldClass")
+
+#importFrom(lme4,
+#      "fixef",
+#      "ranef"
+#)
       
 
-importMethodsFrom(Matrix, "%*%")
+#importMethodsFrom(Matrix, "%*%")
 
 
 exportClasses(
